set max-height for cakeImg to prevent stretch on safari

--- a/src/index.css
+++ b/src/index.css
@@ -233,6 +233,7 @@ footer {
 }
 .userCakes img {
   width: 30%;
+  max-height: 120px;
   border: 1px solid #fff;
 }
 .bagText {
